--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@ header{
     font-family: Roboto, Geneva, Tahoma, sans-serif;
 }
 .logo{
-    width: 50px;
-    height: 50px;
-    margin: 0 0.7em 0 4em;
+    width: 5orem;
+    height: 50rem;
+    margin: 0 0.7rem 0 4rem;
     background-color: white;
     border-radius: 20px;
 }
